--- a/AIMidTermRevise.tex
+++ b/AIMidTermRevise.tex
@@ -1,1 +1,17 @@
 \documentclass[a4paper, 11pt]{article}
+
+\author{Ossama Edbali}
+\title{AI mid-term revision}
+
+\begin{document}
+
+\maketitle
+
+\abstract{
+In this article we are going to cover the topics learned during the first term of the module ``Intro to AI''.
+}
+
+\section{Intelligent agents}
+
+
+\end{document}
