Setting up intelligent agents section

--- a/AIMidTermRevise.tex
+++ b/AIMidTermRevise.tex
@@ -11,7 +11,22 @@
 In this article we are going to cover the topics learned during the first term of the module ``Intro to AI''.
 }
 
-\section{Intelligent agents}
+\section{Intelligent agents and task environments}
+We can think of an agent as an entity that takes a sequence of percepts through \textbf{sensors} from the environment and maps it to an action using \textbf{actuators} (it may affect the environment). The mapping is performed by an \textbf{agent function}.
 
+A rational agent is one that tries to maximise its \textbf{performance measure} for each \textbf{percept sequence}. The performance measure evaluates any sequence of environment states.
+
+Task environments --> PEAS concept and properties
+
+There are several intelligent agents; some of them are:
+\begin{itemize}
+  \item Simple-reflex
+  \item Model-based reflex agents --> handle parital observability and keep track of the percept sequence up to date (internal state)
+  \item Goal-based agents
+  \item Utility-based agents
+  \item Knowledge-based agents
+\end{itemize}
+
+State representations --> atomic, factored (attr, value), structured (objects)
 
 \end{document}
