--- a/AIMidTermRevise.tex
+++ b/AIMidTermRevise.tex
@@ -9,7 +9,16 @@
 
 \abstract{
 In this article we are going to cover the topics learned during the first term of the module ``Intro to AI''.
-So 
+The major topics are:
+\begin{itemize}
+  \item Intelligent agents
+  \item Environments
+  \item Uninformed search
+  \item Informed search
+  \item Heuristics
+  \item Adversarial search and game playing
+\end{itemize}
+
 }
 
 \section{Intelligent agents and task environments}
