Added state representation

--- a/AIMidTermRevise.tex
+++ b/AIMidTermRevise.tex
@@ -88,7 +88,12 @@ Goals are not enough to generate a high-quality behaviour in most environments. 
 
 
 \subsection*{State representations}
-State representation --> atomic, factored (attr, value), structured (objects)
+An agent can deal with different state representations:
+\begin{description}
+  \item[Atomic]
+  \item[Factored]
+  \item[Structured]
+\end{description}
 
 \section{Uninformed search}
 
