--- a/AIMidTermRevise.tex
+++ b/AIMidTermRevise.tex
@@ -320,6 +320,9 @@ function minimax(node, depth, maxPlayer)
 \end{verbatim}
 
 \subsection*{Alpha-beta pruning}
-The problem with minimax algorithm is that the 
+The problem with minimax algorithm is that the nodes generated are exponential in the depth of the tree.
+We can use the concept of \textbf{pruning}, that is eliminate from the search tree paths that are likely to be useless for the final decision (not influencial).
+
+Visual explanation: \url{www.youtube.com/watch?v=xBXHtz4Gbdo}
 
 \end{document}
